# walchain

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  docker.yml
dummy-app/: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/faucet/: Cargo.toml
pallets/faucet/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
specs/: testnet-accounts.txt  testnet-aura1.json  testnet-aura2.json  testnet-grandpa1.json  testnet-grandpa2.json  testnet-rawspec.json  testnet-spec.json
